@@ -1,15 +1,23 @@
 # EvolutionarySimulator
 
-For two maps its best to use full screen mode (some statistics may be not visible) <br />
-Drawing too big map may make that map shows incorrectly <br />
+Application is simple simulation of simulation based on: <br> 
+https://github.com/apohllo/obiektowe-lab/tree/master/proj1 <br>
+made for Objective Programming Course.<br>
 
- In run/debug configuration I added to VM options these command: <br />
+Applications consist of two stages:
+- settings selections
+- simulation
 
---module-path <br />
-"path to javafx library" <br />
---add-modules <br />
-javafx.controls,javafx.fxml <br />
---add-exports <br />
-javafx.graphics/com.sun.javafx.sg.prism=ALL-UNNAMED <br />
+## Settings selections
 
-as it's shown in https://www.jetbrains.com/help/idea/javafx.html
+![img.png](img.png)
+
+User can choose settings for simulation such map size, animals energy use or
+number of animals and grass, it is possible to save these settings.
+
+## Simulation
+
+![img_1.png](img_1.png)
+
+On the screen we see current position of animals and grass when it is grown. Between maps are buttons to control simulations speed.
+In the right there are statistics about map and about selected animals (you can select the animal clicking on it).
